@@ -42,7 +42,7 @@ func TestOneHostSuccessResp_Bulk(t *testing.T) {
 
 	server := ElasticsearchMock(200, expectedResp)
 
-	client := NewClient(server.URL, "", nil, nil, "", "", nil)
+	client := NewClient(server.URL, "", nil, nil, "", "", nil, nil)
 
 	params := map[string]string{
 		"refresh": "true",
@@ -83,7 +83,7 @@ func TestOneHost500Resp_Bulk(t *testing.T) {
 
 	server := ElasticsearchMock(http.StatusInternalServerError, []byte("Something wrong happened"))
 
-	client := NewClient(server.URL, "", nil, nil, "", "", nil)
+	client := NewClient(server.URL, "", nil, nil, "", "", nil, nil)
 
 	params := map[string]string{
 		"refresh": "true",
@@ -125,7 +125,7 @@ func TestOneHost503Resp_Bulk(t *testing.T) {
 
 	server := ElasticsearchMock(503, []byte("Something wrong happened"))
 
-	client := NewClient(server.URL, "", nil, nil, "", "", nil)
+	client := NewClient(server.URL, "", nil, nil, "", "", nil, nil)
 
 	params := map[string]string{
 		"refresh": "true",
